<resources>
    <string name="app_name">Proyecto_Movil</string>
    <string name="presentAppHome">This is my DigiRenting App</string>
    <string name="textMainHome">Welcome to my application</string>
    <string name="Username">Usuario</string>
    <string name="Login">Iniciar sesión</string>
    <string name="SignUp">Registrarse</string>
    <string name="FirstName">Nombre</string>
    <string name="LastName">Apellidos</string>
    <string name="Address">Dirección</string>
    <string name="Email">Email</string>
    <string name="Password">Contraseña</string>

    <string-array name="titlesSlider">

        <item>Descubrir</item>
        <item>Favoritos</item>
        <item>Añadir</item>

    </string-array>
    <string-array name="descriptionsSlider">

        <item>El fragmento \"descubrir\" es el primero que verás al iniciar la aplicación. Aquí podrás encontrar casas que estarán esperando a que vivas en ellas.</item>
        <item>El fragmento \"favoritos\" es donde podrás ver las casas que más te gustan. Como no te conocemos todavía, tendrás que seleccionarlas tú</item>
        <item>Sabemos que algunas personas son unos tiburones de los negocios, si este es tu caso hoy es tu día de suerte. Desde este sitio tendrás la posibilidad de añadir casas a nuestra aplicación</item>

    </string-array>

    <string name="HomeFragment">Descubrir</string>
    <string name="FavoritesFragment">Favoritos</string>
    <string name="AddFragment">Añadir</string>

    <string name="HomeFragmentDescription">El fragmento \"descubrir\" es el primero que verás al iniciar la aplicación. Aquí podrás encontrar casas que estarán esperando a que vivas en ellas.</string>
    <string name="FavoritesFragmentDescription">El fragmento \"favoritos\" es donde podrás ver las casas que más te gustan. Como no te conocemos todavía, tendrás que seleccionarlas tú</string>
    <string name="AddFragmentDescription">Sabemos que algunas personas son unos tiburones de los negocios, si este es tu caso hoy es tu día de suerte. Desde este sitio tendrás la posibilidad de añadir casas a nuestra aplicación</string>

    <string name="Next">Siguiente</string>
    <string name="Previous">Anterior</string>
    <string name="Finish">Finalizar</string>
    <string name="Discover">Descubrir</string>
    <string name="Favorite">Favoritos</string>
    <string name="Add">Añadir</string>
    <string name="Profile">Perfil</string>
    <string name="RemoveHouse">Eliminar</string>
    <string name="Choose">Elegir</string>
    <string name="Region">Región</string>
    <string name="Price">Precio</string>
    <string name="Space">Espacio</string>
    <string name="Description">Descripción</string>
    <string name="Upload">Subir</string>
    <string name="SignOut">Cerrar sesión</string>
    <string name="ChangeProfile">Cambiar Perfil</string>
    <string name="MoreInformation">Más Información</string>
    <string name="DatosPersonales">Bienvenido a tu datos personales</string>
    <string name="OldPassword">Introduce tu anterior contraseña</string>
    <string name="UserInserted">Usuario añadido</string>
    <string name="PasswordIncorrect">Contraseña incorrecta</string>
    <string name="Cancel">Cancelar</string>
    <string name="Se_ha_subido">Se ha subido la casa</string>
    <string name="Se_ha_añadido">Se ha añadido la casa</string>
    <string name="No_se_ha_añadido">No se ha añadido la casa</string>
    <string name="No_se_ha_subido">No se ha subido la casa</string>
    <string name="Fallo_en_tal_cosa">Fallo en tal cosa</string>
    <string name="House_added_to_like">Casa añadida a me gusta</string>
    <string name="House_not_added_to_like">Casa eliminada de me gusta</string>
    <string name="LoginCorrecto">Inicio de sesión correcto</string>
    <string name="LoginIncorrecto">Inicio de sesión incorrecto</string>
    <string name="El_Usuario_Ya_Existe">El nombre de usuario ya existe</string>
</resources>