<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:gravity="center"
                    android:text="@string/presentAppHome"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="40dp"
                    android:gravity="center"
                    android:text="@string/textMainHome"
                    android:textSize="15sp"
                    android:textColor="@color/colorLightText">
                </TextView>
            </LinearLayout>
                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        
                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="15dp"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="6dp">
                            
                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/dashboard_item_1_background">

                                    <View
                                        android:layout_width="80dp"
                                        android:layout_height="0dp"
                                        android:background="@drawable/end_view_background"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintTop_toTopOf="parent">

                                    </View>

                                        <ImageView
                                            android:id="@+id/imageIconSeeHouse"
                                            android:layout_width="50dp"
                                            android:layout_height="50dp"
                                            android:layout_marginStart="12dp"
                                            android:layout_marginTop="12dp"
                                            android:background="@drawable/icon_background"
                                            android:contentDescription="@string/app_name"
                                            android:padding="10dp"
                                            android:src="@drawable/departamento"
                                            app:layout_constraintStart_toStartOf="parent"
                                            app:layout_constraintTop_toTopOf="parent">
                                        </ImageView>
                                    <TextView
                                        android:id="@+id/textMainHouse"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="10dp"
                                        android:layout_marginEnd="80dp"
                                        android:text="Find a departament"
                                        android:textColor="@color/colorWhite"
                                        android:textSize="18sp"
                                        android:textStyle="bold"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toEndOf="@+id/imageIconSeeHouse"
                                        app:layout_constraintTop_toTopOf="@+id/imageIconSeeHouse">
                                    </TextView>
                                    <TextView
                                        android:id="@+id/textSeeHouseDescription"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="12dp"
                                        android:ellipsize="end"
                                        android:maxLines="2"
                                        android:text="You can see departaments"
                                        android:textColor="@color/colorLightText"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toEndOf="@+id/textMainHouse"
                                        app:layout_constraintStart_toStartOf="@+id/textMainHouse"
                                        app:layout_constraintTop_toBottomOf="@+id/textMainHouse">
                                    </TextView>

                                </androidx.constraintlayout.widget.ConstraintLayout>

                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="15dp"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="6dp">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/dashboard_item_2_background">

                                <View
                                    android:layout_width="80dp"
                                    android:layout_height="0dp"
                                    android:background="@drawable/end_view_background"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent">

                                </View>

                                <ImageView
                                    android:id="@+id/imageIconAddHouse"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_marginStart="12dp"
                                    android:layout_marginTop="12dp"
                                    android:background="@drawable/icon_background"
                                    android:contentDescription="@string/app_name"
                                    android:padding="10dp"
                                    android:src="@drawable/casa"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent">
                                </ImageView>
                                <TextView
                                    android:id="@+id/textMainAddHouse"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:layout_marginEnd="80dp"
                                    android:text="Add a house"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="18sp"
                                    android:textStyle="bold"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toEndOf="@+id/imageIconAddHouse"
                                    app:layout_constraintTop_toTopOf="@+id/imageIconAddHouse">
                                </TextView>
                                <TextView
                                    android:id="@+id/textAddHouseDescription"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="12dp"
                                    android:ellipsize="end"
                                    android:maxLines="2"
                                    android:text="You can add a house"
                                    android:textColor="@color/colorLightText"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="@+id/textMainAddHouse"
                                    app:layout_constraintStart_toStartOf="@+id/textMainAddHouse"
                                    app:layout_constraintTop_toBottomOf="@+id/textMainAddHouse">
                                </TextView>

                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="15dp"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="6dp">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/dashboard_item_3_background">

                                <View
                                    android:layout_width="80dp"
                                    android:layout_height="0dp"
                                    android:background="@drawable/end_view_background"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent">

                                </View>

                                <ImageView
                                    android:id="@+id/imageIconLikeHouse"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_marginStart="12dp"
                                    android:layout_marginTop="12dp"
                                    android:background="@drawable/icon_background"
                                    android:contentDescription="@string/app_name"
                                    android:padding="10dp"
                                    android:src="@drawable/como"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent">
                                </ImageView>
                                <TextView
                                    android:id="@+id/textMainLikeHouse"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:layout_marginEnd="80dp"
                                    android:text="Show liked houses"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="18sp"
                                    android:textStyle="bold"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toEndOf="@+id/imageIconLikeHouse"
                                    app:layout_constraintTop_toTopOf="@+id/imageIconLikeHouse">
                                </TextView>
                                <TextView
                                    android:id="@+id/textLikeHouseDescription"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="12dp"
                                    android:ellipsize="end"
                                    android:maxLines="2"
                                    android:text="Here you will see liked houses"
                                    android:textColor="@color/colorLightText"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="@+id/textMainLikeHouse"
                                    app:layout_constraintStart_toStartOf="@+id/textMainLikeHouse"
                                    app:layout_constraintTop_toBottomOf="@+id/textMainLikeHouse">
                                </TextView>

                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>